--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:fontFamily="serif-monospace"
         android:backgroundTint="@color/brown"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/map" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
